--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.4",
     "postcss": "8.4.32",
     "react": "18.2.0",
@@ -21,6 +22,6 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
-    "yup": "^1.2.0"
+    "yup": "^1.3.3"
   }
 }
