--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.1",
     "postcss": "8.4.32",
     "react": "18.2.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^9.1.3",
