--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "autoprefixer": "10.4.16",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.479.0",
     "next": "14.1.1",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-datepicker": "^8.2.1",
