--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
-    "next": "14.1.1",
+    "next": "^14.2.8",
     "next-themes": "^0.4.6",
     "postcss": "8.4.32",
     "react": "18.2.0",
@@ -27,6 +28,10 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
